add page coffee + news

--- a/client/user/index.html
+++ b/client/user/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://storage.googleapis.com/hms_prod/hotel-content/img/2702Mi/1.jpg" />
     <link href="./src/index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>The Coffee House</title>
   </head>
   <body>
     <div id="root"></div>
