fix default active category

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link href="./src/index.css" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="https://storage.googleapis.com/hms_prod/hotel-content/img/2702Mi/1.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Coffee House</title>
   </head>
   <body>
